# NewOldMaker

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
scripts/: get-model.sh
src/: app.rs  main.rs
src/audio/: mod.rs  music.rs  sfx.rs  synth.rs
src/core/: aigen.rs  data.rs  defaults.rs  i18n.rs  io.rs  mod.rs
src/editor/: database.rs  mod.rs
src/game/: battle.rs  mod.rs
src/gfx/: camera.rs  mesh.rs  mod.rs  pixelart.rs  renderer.rs  scene.rs  shaders.wgsl
src/llm/: mod.rs
